--- a/Foodfy/front-end/index.html
+++ b/Foodfy/front-end/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/header-footer.css">
+    <link rel="stylesheet" href="styles/section.css">
     <title>Foodfy</title>
 </head>
 
