--- a/Foodfy/front-end/sobre.html
+++ b/Foodfy/front-end/sobre.html
@@ -12,7 +12,7 @@
 <body>
     <div class="content">
         <header>
-            <img src="assets/logo.png" alt="Logo">
+            <img src="assets/logo.png" alt="Logo" onclick="return_index()">
             <div>
                 <a href="sobre.html">Sobre</a>
                 <a href="receitas.html">Receitas</a>
@@ -52,6 +52,7 @@
     <div class="footer">
         <p>Todos direitos reservados, receitas Foodfy.</p>
     </div>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
